--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_RAPID_API_ARTICLE_KEY= '04a72a22demsh810c8b8ef5a5cb3p17a56bjsncb7a5fe5dac1'
+(VITE_RAPID_API_ARTICLE_KEY= '04a72a22demsh810c8b8ef5a5cb3p17a56bjsncb7a5fe5dac1')
