changes for firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "ai-text-summarizer-da6ef"
-  }
+    "default": "ai-text-summarizer-da6ef",
+    " ": "ai-text-summarizer-da6ef"
+  },
+  "targets": {},
+  "etags": {}
 }
